fix: adjusted styles on mobile responsiveness

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,12 +33,20 @@
   transition: color 0.3s, transform 0.3s;
 }
 
-.footer-icons .fa:hover {
+.footer-icons .fa-regular {
+  text-decoration: none;
+  font-size: 2.5em;
+  margin: 0 15px;
+  color: gray;
+  transition: color 0.3s, transform 0.3s;
+}
+
+.footer-icons .fa-brands:hover {
   color: #51aebf;
   transform: scale(1.2);
 }
 
-.footer-icons .fa-brands:hover {
+.footer-icons .fa-regular:hover {
   color: #51aebf;
   transform: scale(1.2);
 }
