--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,7 @@
 }
 
 .logo img {
-  margin: 10px auto;
-  margin-right: 25px;
+  margin: 10px auto 0 25px;
 }
 
 .navbar {
@@ -20,13 +19,11 @@
 .navbar-brand p {
   color: #09516c;
   font-size: 1.5rem;
-  font-family: inherit;
 }
 
 .nav-link {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
-  /* margin-left: 15px; */
   padding: 10px 0;
 }
 
@@ -45,7 +42,6 @@ h1 {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  display: inline-block;
   text-align: center;
   font-family: 'Raleway', sans-serif;
   text-decoration: none;
@@ -81,11 +77,40 @@ h1 {
   padding: 12px 16px;
   font-family: 'Raleway', sans-serif;
   text-decoration: none;
-  display: block;
 }
 
 .navbar-nav .dropdown-menu .dropdown-item:hover {
   background-color: #ddd;
+}
+
+/* Media Queries for Responsiveness */
+@media screen and (max-width: 1200px) {
+  .navbar-brand {
+    font-size: 2rem;
+    margin-right: 10rem;
+  }
+
+  .navbar-brand p {
+    font-size: 1.2rem;
+  }
+
+  .nav-link {
+    font-size: 0.95rem;
+  }
+
+  .button-resume {
+    font-size: 1.1rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .navbar-brand {
+    margin-right: 5rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -124,12 +149,6 @@ h1 {
 
   h1 {
     font-size: 2rem;
-    text-align: center;
-  }
-
-  .button-resume {
-    font-size: 1.1rem;
-    padding: 0.7rem 1.5rem;
   }
 }
 
@@ -152,11 +171,5 @@ h1 {
 
   h1 {
     font-size: 1.8rem;
-    text-align: center;
-  }
-
-  .button-resume {
-    font-size: 1rem;
-    padding: 0.6rem 1.2rem;
   }
 }
